moved chat generation into thread.